# stripe-begone

./: README.md  em_image.py  main_gui.py  pyproject.toml  requirements.txt  stripe-begone.spec
src/IteraStripe/: em_image.py  main_gui.py
src/IteraStripe/gui/: dialogs.py  frames.py  main_window.py  widgets.py
test_data/: Vero_Cells 2600 x 20240612 1851 Ceta.tif
